Fixed show and edit.html.twig formatting issues Added formatting to TilesType.php Updated <th> css to have nowrap

--- a/web/css_library/thegame.css
+++ b/web/css_library/thegame.css
@@ -10,6 +10,7 @@ th {
   font-family: Orbitron, "serif";
   font-size: 1em;
   text-align: left;
+  white-space: nowrap;
 }
 ul {
   list-style: none;
